/*
 * $Id: ChangeLog,v 1.3082 2004/06/17 20:18:37 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-17 20:19 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * include/hbclass.ch
    ! Add syntax for Visual Objects compatibility.
    Note: See line 351, 373 and 378 for changes.
    
  * utils/hbmake/hbmake.prg
    ! Fixed to not ask by the main prg if only one prg is selected. 

2004-06-17 15:10 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/gtapi.c
    * Formating.
  * source/rtl/gtwin/gtwin.c
  * source/rtl/gtwvt/gtwvt.c
    ! Fixed clipper compatability in gt_Box
      (other GTs might need similiar fix if they used gtwin code as template).

2004-06-18 10:10 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/mysql/mysql.c
    - HB_FUNC(FILETOSQLBINARY) fixed to use local filelength() and test return value
      Note: FILETOSQLBINARY() returns an empty string not a RT error, if _ANY_ errors are encountered
            such as hb_fsopen() failing ( file in use ) or hb_xgrab() failure ( insufficient memory ) .

2004-06-17 23:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/lict/screen2.prg
    ! Fixed SAYSCREEN() to work with empty strings.

2004-06-17 10:45 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    ! Fixed Normal Stringify and Smart Stringify to never stringify a Complex Macro '&(...)' and ommit the '&'.

  * include/hbver.h
    * Refreshed.

2004-06-17 15:35 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtsln/gtsln.c
    ! hack for bug in UTF-8 patched version of slang
      the characters SLSMG_UTEE_CHAR_TERM and SLSMG_DTEE_CHAR_TERM
      are replaced

2004-06-17 14:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/xprompt.sh